# Paper2

./: .clang-format.conf  .gitmodules  CMakeLists.txt  meson.build  meson_options.txt  todo.md
Paper2/: BasicTypes.hpp  Constants.hpp  Document.cpp  Document.hpp  Group.cpp  Group.hpp  Item.cpp  Item.hpp  Paint.cpp  Paint.hpp  Path.cpp  Path.hpp  RenderData.hpp  RenderInterface.cpp  RenderInterface.hpp  Style.cpp  Style.hpp  Symbol.cpp  Symbol.hpp
Paper2/BinFormat/: BinFormatExport.cpp  BinFormatExport.hpp  BinFormatImport.cpp  BinFormatImport.hpp
Paper2/PDF/: PDFExport.cpp  PDFExport.hpp
Paper2/Private/: BezierView.hpp  BooleanOperations.cpp  BooleanOperations.hpp  ContainerView.hpp  JoinAndCap.cpp  JoinAndCap.hpp  PathFitter.cpp  PathFitter.hpp  PathFlattener.cpp  PathFlattener.hpp  Shape.cpp  Shape.hpp
Paper2/SVG/: SVGExport.cpp  SVGExport.hpp  SVGImport.cpp  SVGImport.hpp  SVGImportResult.cpp  SVGImportResult.hpp
Paper2/Tarp/: TarpRenderer.cpp  TarpRenderer.hpp
Playground/: BinaryFormatPlayground.cpp  CMakeLists.txt  NestedClipping.cpp  PaperPlayground.cpp  SVGExportPlayground.cpp  SVGImportPlayground.cpp  meson.build
Tests/: CMakeLists.txt  PaperTests.cpp  meson.build
