find_package(OpenGL REQUIRED)
find_package(glfw3 REQUIRED)

include_directories (${OPENGL_INCLUDE_DIRS})
add_executable (PaperPlayground PaperPlayground.cpp)
target_link_libraries(PaperPlayground Paper2 ${PAPERDEPS} glfw ${OPENGL_LIBRARIES})
add_executable (SVGExportPlayground SVGExportPlayground.cpp)
target_link_libraries(SVGExportPlayground Paper2 ${PAPERDEPS} glfw ${OPENGL_LIBRARIES})
add_executable (SVGImportPlayground SVGImportPlayground.cpp)
target_link_libraries(SVGImportPlayground Paper2 ${PAPERDEPS} glfw ${OPENGL_LIBRARIES})
